# ANSYS_skill

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
ansys-mechanical-mvp/: SKILL.md
ansys-mechanical-mvp/agents/: openai.yaml
ansys-mechanical-mvp/references/: mechanical-mvp.md
ansys-mechanical-mvp/scripts/: check_mechanical_delivery.py
benchmarks/cantilever/: benchmark.json
cae-validation-platform/: SKILL.md
cae-validation-platform/agents/: openai.yaml
cae-validation-platform/references/: platform-refactor-playbook.md  strict-fem-cfd-review.md
examples/: cantilever_workflow.yaml
src/ansys_skill_platform/: __init__.py  cli.py  config.py  pipeline.py  report.py
src/ansys_skill_platform/benchmarks/: __init__.py  cantilever.py
src/ansys_skill_platform/validators/: __init__.py  mechanical.py
tests/: test_cantilever.py  test_config_pipeline.py  test_mechanical_validator.py
