[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ansys-skill-platform"
version = "0.1.0"
description = "Minimum viable simulation validation platform for Ansys Workbench Mechanical deliverables."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "ANSYS_skill contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
ansys-skill = "ansys_skill_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
